# VensersJournal

./: .gitignore  LICENSE  README.md  helpers.js  newcr.sh  package-lock.json  package.json  server.js
difftool/: diff_docs.py  diff_rules.py  diff_utils.py  doc_diff_utils.py  docs_manip.py  rules_manip.py  sort_utils.py
reference/VJAPI/: openapi.json
scraper/: pyproject.toml
scraper/test/: test_grammar.py  test_mtr.py
scraper/vensers_journal_mtr_scraper/: mtr.py  mtr_grammar.py
static/ipg/: ipg-2008-03-01.doc
static/mtr/: mtr-1994-01-26.txt  mtr-2003-12-01.doc  mtr-2008-03-01.txt  mtr-2009-06-20.txt
static/res/: assist.js  cardlist.js  cardlist.js.BAK  helpers.js  sets.js
static/resources/: set-information.js
static/rules/: Aether Revolt (AER).txt  Battle for Zendikar (BFZ).txt  Battlebond (BBD).txt  Commander 2017 (C17).txt  Conspiracy Take the Crown (CN2).txt  Dragons of Tarkir (DTK).txt  Hour of Devastation (HOU).txt  Ixalan (XLN).txt  Khans of Tarkir (KTK).txt  Magic Origins (ORI).txt  Oath of the Gatewatch (OGW).txt  Rivals of Ixalan (RIX).txt  cr-1997-03-24-5ED.txt  cr-1999-04-23-6ED.txt  cr-1999-11-01-BRB.txt  cr-2001-07-23-APC.txt  cr-2001-09-24-ODY.txt  cr-2002-02-20-TOR.txt  cr-2003-03-15-LGN.txt  cr-2003-05-26-SCG.txt  cr-2003-07-01-8ED.txt  cr-2003-12-01-MRD.txt  cr-2004-02-01-DST.txt  cr-2004-06-01-5DN.txt  cr-2004-10-01-CHK.txt  cr-2005-10-01-RAV.txt  cr-2006-02-01-GPT.txt  cr-2006-07-15-CSP.txt  cr-2006-10-01-TSP.txt  cr-2007-02-01-PLC.txt  cr-2007-05-01-FUT.txt  cr-2007-07-13-10E.txt  cr-2007-09-07-MED.txt  (+34 more)
utils/: update_card_list.py
(+191 files in other folders)
